--- a/src/components/pattern/pattern_cell.css
+++ b/src/components/pattern/pattern_cell.css
@@ -1,12 +1,7 @@
-.cell img {
-    width: 100%;
-    height: 100%;
-    vertical-align: unset;
-    border: 1px solid rgb(150, 150, 150);
-
-    -webkit-user-drag: none;
-    user-select: none;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
+.stichtype {
+    margin: 1px;
+    width: calc(100% - 2px);
+    height: calc(100% - 2px);
+    background-size: contain;
 }
+
