fix positioning popup menu

--- a/src/components/pattern/dropdown.css
+++ b/src/components/pattern/dropdown.css
@@ -1,6 +1,6 @@
 
 .cell-dropdown {
-    position: absolute !important;
+    position: fixed !important;
     transform-origin: left top;
     z-index: 99999;
 } 
