--- a/src/components/pattern/pattern_cell.css
+++ b/src/components/pattern/pattern_cell.css
@@ -3,5 +3,7 @@
     width: calc(100% - 2px);
     height: calc(100% - 2px);
     background-size: contain;
+
+    background-repeat: no-repeat;
 }
 
